--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 beautifulsoup4==4.12.2
+exceptiongroup==1.2.0
 iniconfig==2.0.0
+mypy==0.971
+mypy-extensions==1.0.0
 packaging==23.2
 pluggy==1.3.0
 pytest==7.4.3
 soupsieve==2.5
-mypy==0.971
+tomli==2.0.1
+types-beautifulsoup4==4.12.0.7
+types-html5lib==1.1.11.15
+typing_extensions==4.9.0
